// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-call > a dynamic t-call in a loop keeps the components of two items apart 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, zero, callTemplate, withKey, keyOf } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      ctx["item_first"] = i1 === 0;
      ctx["item_last"] = i1 === k_block1.length - 1;
      ctx["item_index"] = i1;
      ctx["item_value"] = v_block1[i1];
      const key1 = ctx['item'].id;
      const skey1 = keyOf(key1);
      const ctx2 = Object.create(ctx);
      ctx2["v"] = ctx['item'].id+ctx['this'].suffix;
      ctx2[zero] = null;
      c_block1[i1] = withKey(callTemplate((ctx['item'].t), this, app, ctx2, node, key + \`__1__\${skey1}\`), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-call > a dynamic t-call in a loop keeps the components of two items apart 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["v"]);
  
  return function template(ctx, node, key = "") {
    return comp1({v: ctx['v']}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > a dynamic t-call in a loop keeps the components of two items apart 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call > a dynamic t-call in a loop keeps the components of two items apart 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["v"]);
  
  return function template(ctx, node, key = "") {
    return comp1({v: ctx['v']}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > body content is not evaluated if callee does not use t-out='0' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return safeOutput(ctx['this'].sideEffect(), key, "__1");
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`noZero\`, this, app, ctx1, node, key + \`__2\`);
  }
}"
`;

exports[`t-call > body content is not evaluated if callee does not use t-out='0' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>no zero here</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call > dynamic t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return text(\` owl \`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate((ctx['this'].current.template), this, app, ctx1, node, key + \`__1\`);
  }
}"
`;

exports[`t-call > dynamic t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>foo</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call > dynamic t-call 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`bar\`);
  }
}"
`;

exports[`t-call > dynamic t-call with same sub component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, withoutZero, callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].current.template, key, "__1");
    const b3 = callTemplate((ctx['this'].current.template), this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__2\`);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > dynamic t-call with same sub component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > dynamic t-call with same sub component 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`t-call > dynamic t-call with same sub component 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > dynamic t-call: key is propagated 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, zero, withoutZero, callTemplate } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({}, key + \`__1\`, node, this, null);
    const b3 = callTemplate((ctx['this'].sub), this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__2\`);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > dynamic t-call: key is propagated 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div block-attribute-0="id"/>\`);
  
  return function template(ctx, node, key = "") {
    let attr1 = ctx['this'].id;
    return block1([attr1]);
  }
}"
`;

exports[`t-call > dynamic t-call: key is propagated 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > handlers are properly bound through a dynamic t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(('__template__999'), this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1\`);
    const b3 = safeOutput(ctx['this'].counter, key, "__2");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call > handlers are properly bound through a dynamic t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['this'].update();
  
  let block1 = createBlock(\`<p block-handler-0="click">lucas</p>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`t-call > handlers are properly bound through a t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`__template__999\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1\`);
    const b3 = safeOutput(ctx['this'].counter, key, "__2");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call > handlers are properly bound through a t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].update, ctx, ev);
  
  let block1 = createBlock(\`<p block-handler-0="click">lucas</p>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`t-call > handlers with arguments are properly bound through a t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`__template__999\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call > handlers with arguments are properly bound through a t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['this'].update(ctx['this'].a);
  
  let block1 = createBlock(\`<p block-handler-0="click">lucas</p>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`t-call > parent is set within t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`__template__999\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call > parent is set within t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > parent is set within t-call 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>lucas</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call > parent is set within t-call with no parentNode 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    return callTemplate(\`__template__999\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1\`);
  }
}"
`;

exports[`t-call > parent is set within t-call with no parentNode 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > parent is set within t-call with no parentNode 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>lucas</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call > recursive t-call binding this -- static t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["level"] = 0;
    ctx1[zero] = null;
    const b2 = callTemplate(\`recursive\`, this, app, ctx1, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call > recursive t-call binding this -- static t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput, zero, callTemplate } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].onClicked.bind(ctx['this']), ctx, ev);
  
  let block3 = createBlock(\`<div block-handler-0="click.stop"><block-child-0/></div>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['level']<2) {
      const b4 = safeOutput(ctx['level'], key, "__1");
      const b3 = block3([ctx], [b4]);
      const ctx1 = Object.create(ctx);
      ctx1["level"] = ctx['level']+1;
      ctx1[zero] = null;
      const b5 = callTemplate(\`recursive\`, this, app, ctx1, node, key + \`__2\`);
      b2 = multi([b3, b5]);
    }
    return multi([b2]);
  }
}"
`;

exports[`t-call > sub components in two t-calls 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block3 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['this'].state.val===1) {
      b2 = callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1\`);
    } else {
      const b4 = callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__2\`);
      b3 = block3([], [b4]);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > sub components in two t-calls 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  return function template(ctx, node, key = "") {
    return comp1({val: ctx['this'].state.val}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > sub components in two t-calls 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call > t-call and t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    return callTemplate(\`a\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call and t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  return function template(ctx, node, key = "") {
    return ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`__1\`) : text("");
  }
}"
`;

exports[`t-call > t-call in t-foreach and children component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, zero, withoutZero, callTemplate, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(['a','b','c']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["val"] = k_block2[i1];
      ctx["val_first"] = i1 === 0;
      ctx["val_last"] = i1 === k_block2.length - 1;
      ctx["val_index"] = i1;
      ctx["val_value"] = v_block2[i1];
      const key1 = ctx['val'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(callTemplate(\`__template__999\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`__1__\${skey1}\`), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call > t-call in t-foreach and children component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  return function template(ctx, node, key = "") {
    return comp1({val: ctx['val']}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`t-call > t-call in t-foreach and children component 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call > t-call with t-call-context and subcomponent 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['this'].subctx;
    return callTemplate(\`someTemplate\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call with t-call-context and subcomponent 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["name"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, ["name"]);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({name: ctx['this'].aab}, key + \`__1\`, node, this, null);
    const b3 = comp2({name: ctx['this'].lpe}, key + \`__2\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > t-call with t-call-context and subcomponent 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`child\`);
    const b3 = safeOutput(ctx['this'].props.name, key, "__1");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > t-call with t-call-context and subcomponent, in dev mode 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['this'].subctx;
    return callTemplate(\`someTemplate\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call with t-call-context and subcomponent, in dev mode 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["name"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, ["name"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {name: ctx['this'].aab};
    const b2 = comp1(props1, key + \`__1\`, node, this, null);
    const props2 = {name: ctx['this'].lpe};
    const b3 = comp2(props2, key + \`__2\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > t-call with t-call-context and subcomponent, in dev mode 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`child\`);
    const b3 = safeOutput(ctx['this'].props.name, key, "__1");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > t-call with t-call-context, simple use 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['this'].subctx;
    return callTemplate(\`someTemplate\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call with t-call-context, simple use 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].aab, key, "__1");
    const b3 = safeOutput(ctx['this'].lpe, key, "__2");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call > t-call-context keys are also variables of the called template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['this'].subctx;
    return callTemplate(\`someTemplate\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call-context keys are also variables of the called template 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['aab'], key, "__1");
    const b3 = text(\`-\`);
    const b4 = safeOutput(ctx['this'].lpe, key, "__2");
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`t-call > t-call-context: ComponentNode is not looked up in the context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = {method:function(){},myRef:ctx['this'].myRef,myRef2:ctx['this'].myRef2};
    return callTemplate(\`someTemplate\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call-context: ComponentNode is not looked up in the context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createRef, safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  
  let block2 = createBlock(\`<div block-ref="0">outside slot</div>\`);
  let block4 = createBlock(\`<div block-ref="0">I'm the default slot</div>\`);
  let block5 = createBlock(\`<div><block-child-0/></div>\`);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let ref2 = createRef(ctx['this'].myRef2, node);
    const b4 = block4([ref2]);
    ctx["test"] = 3;
    const b6 = safeOutput(ctx['test'], key, "__1");
    const b5 = block5([], [b6]);
    return multi([b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    let ref1 = createRef(ctx['this'].myRef, node);
    const b2 = block2([ref1]);
    const b7 = comp1({prop: (ctx['this'].method).bind(this),slots: markRaw({"default": {__render: slot1, __ctx: ctx, __owner: this}})}, key + \`__2\`, node, this, null);
    return multi([b2, b7]);
  }
}"
`;

exports[`t-call > t-call-context: ComponentNode is not looked up in the context 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    return callSlot(ctx, node, key + \`__1\`, "default", false, null);
  }
}"
`;

exports[`t-call > t-call-context: slots don't make component available again when context is captured 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = {};
    return callTemplate(\`template\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call-context: slots don't make component available again when context is captured 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    return safeOutput(Object.keys(ctx['this']), key, "__1");
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["dummy"] = 0;
    const props1 = {slots: markRaw({"default": {__render: slot1, __ctx: ctx, __owner: this}})};
    return comp1(props1, key + \`__2\`, node, this, null);
  }
}"
`;

exports[`t-call > t-call-context: slots don't make component available again when context is captured 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    return callSlot(ctx, node, key + \`__1\`, "default", false, null);
  }
}"
`;

exports[`t-call > t-call-context: this is not available inside t-call-context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = {};
    return callTemplate(\`someTemplate\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`__1\`);
  }
}"
`;

exports[`t-call > t-call-context: this is not available inside t-call-context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(Object.keys(ctx['this']), key, "__1");
  }
}"
`;

exports[`t-call > t-set inside t-call are not evaluated before being rendered 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b3 = safeOutput(ctx['v'], key, "__1");
    const b4 = text(\` coucou \`);
    ctx["v"] = ctx['this'].f();
    const b5 = safeOutput(ctx['v'], key, "__2");
    return multi([b3, b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`a\`, this, app, ctx1, node, key + \`__3\`);
  }
}"
`;

exports[`t-call > t-set inside t-call are not evaluated before being rendered 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  return function template(ctx, node, key = "") {
    return ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`__1\`) : text("");
  }
}"
`;
